--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="shortcut icon" href="./media/laptop.svg">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-  <title>Al hussein | CV</title>
+  <title>Al hussein KHOUMA | Portfolio</title>
 </head>
 
 <body>
